--- a/src/scss/components/_crumbs.scss
+++ b/src/scss/components/_crumbs.scss
@@ -24,12 +24,11 @@ $crumbs-icon-hover-color: $default-action-color-hover !default;
 .c-crumbs {
 	@include parent();
 	margin: 0;
-	padding: $crumbs-spacing;
 	list-style: none;
 
 	&-item {
 		margin: 0;
-		padding: 0;
+		padding: $crumbs-spacing;
 
 		&:not(:first-of-type) {
 			display: none;
@@ -69,8 +68,8 @@ $crumbs-icon-hover-color: $default-action-color-hover !default;
 		position: relative;
 		display: inline-flex;
 		align-self: center;
-		padding: 0;
-		padding-left: $crumbs-spacing;
+		padding: $crumbs-spacing;
+		padding-right: 0;
 
 		&:hover {
 			text-decoration: underline;
