--- a/src/scss/components/_crumbs.scss
+++ b/src/scss/components/_crumbs.scss
@@ -24,6 +24,7 @@ $crumbs-icon-hover-color: $default-action-color-hover !default;
 .c-crumbs {
 	@include parent();
 	margin: 0;
+	padding: 0;
 	list-style: none;
 
 	&-item {
