--- a/src/scss/components/_forum.scss
+++ b/src/scss/components/_forum.scss
@@ -56,6 +56,8 @@ $forum-title-icon-color: $default-info-color !default;
 
 		&-read {
 			color: $forum-media-read-color;
+			width: $forum-media-size;
+			height: $forum-media-size;
 		}
 	}
 
