mass variable refactoring & paging vertical align

--- a/src/scss/components/_crumbs.scss
+++ b/src/scss/components/_crumbs.scss
@@ -9,7 +9,7 @@
 // @settings
 
 // Layout Variables
-$crumbs-spacing: 16px !default;
+$crumbs-spacing: $default-spacing !default;
 
 
 // Theme Variables
