--- a/src/scss/components/_drawer.scss
+++ b/src/scss/components/_drawer.scss
@@ -9,7 +9,7 @@
 // @settings
 
 // Layout Variables
-$drawer-spacing: 16px !default;
+$drawer-spacing: $default-spacing !default;
 $drawer-bar-offset: 58px !default;
 $drawer-width: 248px !default;
 $drawer-border-height: $default-border-size;
@@ -43,7 +43,7 @@ $drawer-border: $drawer-border-height solid $drawer-border-color !default;
 	flex-shrink: 1;
 	align-self: auto;
 	height: 100%;
-	padding: $drawer-spacing 0;
+	padding: ($drawer-spacing * 2) 0;
 	transform: scaleX(0);
 	transform-origin: center right;
 
@@ -72,14 +72,14 @@ $drawer-border: $drawer-border-height solid $drawer-border-color !default;
 		border-bottom: $drawer-border;
 		color: $drawer-text-color;
 		margin-bottom: 0;
-		padding: $drawer-spacing;
+		padding: ($drawer-spacing * 2);
 
 		&-name {
 			@include type(body2);
 			vertical-align: middle;
 			display: none;
-			margin-left: ($drawer-spacing / 2);
-			padding: 0 $drawer-spacing 0 0;
+			margin-left: $drawer-spacing;
+			padding: 0 ($drawer-spacing * 2) 0 0;
 		}
 
 		&-title {
@@ -115,7 +115,7 @@ $drawer-border: $drawer-border-height solid $drawer-border-color !default;
 		position: relative;
 		display: block;
 		overflow: hidden;
-		padding: $drawer-spacing $drawer-spacing $drawer-spacing ($drawer-spacing * 1.5);
+		padding: ($drawer-spacing * 2) ($drawer-spacing * 2) ($drawer-spacing * 2) ($drawer-spacing * 3);
 		cursor: pointer;
 		transition: 0.5s;
 		transform: translate3d(0, 0, 0);
@@ -129,7 +129,7 @@ $drawer-border: $drawer-border-height solid $drawer-border-color !default;
 
 		&-text {
 			display: none;
-			padding-left: ($drawer-spacing / 2);
+			padding-left: $drawer-spacing;
 		}
 
 		&:after {
