--- a/src/scss/components/_menu.scss
+++ b/src/scss/components/_menu.scss
@@ -9,14 +9,11 @@
 // @settings
 
 // Layout Variables
-$menu-spacing: 16px !default;
-$menu-spacing-horizontal: $menu-spacing !default;
-$menu-spacing-vertical: ($menu-spacing / 2) !default;
-$menu-icon-margin: 24px !default;
-$menu-icon-size: 32px !default;
+$menu-spacing: $default-spacing !default;
+$menu-icon-size: $default-icon-md !default;
 $menu-link-size: 48px !default;
 $menu-border-radius: $default-border-radius !default;
-$menu-divider-height: 1px !default;
+$menu-divider-height: $default-border-size !default;
 $menu-opacity-1: $default-opacity !default;
 $menu-opacity-87: $default-opacity-87 !default;
 $menu-opacity-54: $default-opacity-54 !default;
@@ -36,7 +33,7 @@ $menu-divider-color: rgba(0, 0, 0, 0.125) !default;
 // @scss
 .c-menu {
 	margin: 0;
-	padding: $menu-spacing-vertical 0;
+	padding: $default-spacing 0;
 	list-style: none;
 
 	&-container {
@@ -72,7 +69,7 @@ $menu-divider-color: rgba(0, 0, 0, 0.125) !default;
 		color: $menu-link-color;
 		align-items: center;
 		height: $menu-link-size;
-		padding: 0 $menu-spacing-horizontal 0 $menu-spacing-horizontal;
+		padding: 0 ($menu-spacing * 2) 0 ($menu-spacing * 2);
 		cursor: pointer;
 
 		&-icon {
@@ -80,7 +77,7 @@ $menu-divider-color: rgba(0, 0, 0, 0.125) !default;
 			opacity: $menu-opacity-54;
 			width: $menu-icon-size;
 			height: $menu-icon-size;
-			margin-right: $menu-icon-margin;
+			margin-right: ($menu-spacing * 3);
 		}
 
 		&:hover {
@@ -101,7 +98,7 @@ $menu-divider-color: rgba(0, 0, 0, 0.125) !default;
 	&-divider {
 		background-color: $menu-divider-color;
 		height: $menu-divider-height;
-		margin-top: $menu-spacing-vertical;
-		margin-bottom: $menu-spacing-vertical;
+		margin-top: $default-spacing;
+		margin-bottom: $default-spacing;
 	}
 }
