--- a/src/scss/components/_notification.scss
+++ b/src/scss/components/_notification.scss
@@ -9,9 +9,9 @@
 // @settings
 
 // Layout Variables
-$notification-spacing: 16px !default;
+$notification-spacing: $default-spacing !default;
 $notification-border-radius: $default-border-radius !default;
-$notification-icon-size: 24px !default;
+$notification-icon-size: $default-icon-md !default;
 
 // Theme Variables
 $notification-hover-color: $gray-100 !default;
@@ -40,7 +40,7 @@ $notification-action-bg: $default-action-bg-hover !default;
 	&-meta {
 		border-radius: 50%;
 		color: $notification-action-icon-color;
-		padding: $notification-spacing;
+		padding: ($notification-spacing * 2);
 		transition: 0.5s;
 		transform: translate3d(0, 0, 0);
 
