--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -104,6 +104,7 @@
 @import "components/crumbs";
 @import "components/toolbar";
 @import "components/tooltip";
+@import "components/hero";
 
 
 // 7. Theme
