add footer component

--- a/src/scss/theme.scss
+++ b/src/scss/theme.scss
@@ -105,6 +105,7 @@
 @import "components/toolbar";
 @import "components/tooltip";
 @import "components/hero";
+@import "components/footer";
 
 
 // 7. Theme
