--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -23,10 +23,7 @@ $footer-height: $default-height-dense !default;
 
 	&-nav {
 		&-link {
-			display: inline-flex;
-			justify-content: center;
-			align-items: center;
-			height: $footer-height;
+			@include center($footer-height);
 			padding: 0 ($footer-spacing * 2);
 
 			&-icon + &-text {
