--- a/src/scss/components/_notification.scss
+++ b/src/scss/components/_notification.scss
@@ -11,7 +11,11 @@
 // Layout Variables
 $notification-spacing: $default-spacing !default;
 $notification-border-radius: $default-border-radius !default;
+$notification-border-size: $default-border-size !default;
 $notification-icon-size: $default-icon-md !default;
+$notification-meta-border-radius: 50% !default;
+$notification-container-width: 300px !default;
+$notification-container-width-lg: 420px !default;
 
 // Theme Variables
 $notification-hover-color: $gray-100 !default;
@@ -29,7 +33,7 @@ $notification-action-bg: $default-action-bg-hover !default;
 // @scss
 .c-notification {
 	&-item {
-		border-top: 1px solid $notification-border-color;
+		border-top: $notification-border-size solid $notification-border-color;
 
 		&:hover {
 			background-color: $notification-hover-color;
@@ -38,7 +42,7 @@ $notification-action-bg: $default-action-bg-hover !default;
 	}
 
 	&-meta {
-		border-radius: 50%;
+		border-radius: $notification-meta-border-radius;
 		color: $notification-action-icon-color;
 		padding: ($notification-spacing * 2);
 		transition: 0.5s;
@@ -74,7 +78,7 @@ $notification-action-bg: $default-action-bg-hover !default;
 	}
 
 	&-footer {
-		border-top: 1px solid $notification-border-color;
+		border-top: $notification-border-size solid $notification-border-color;
 
 		&-action {
 			text-align: center;
@@ -111,7 +115,7 @@ $notification-action-bg: $default-action-bg-hover !default;
 		z-index: 999;
 		top: 0;
 		overflow: auto;
-		width: 300px;
+		width: $notification-container-width;
 		transition: all 0.2s ease;
 		transform: scale(0);
 
@@ -120,7 +124,7 @@ $notification-action-bg: $default-action-bg-hover !default;
 		}
 
 		@media (min-width: $bp-md) {
-			width: 420px;
+			width: $notification-container-width-lg;
 		}
 	}
 }
