update icons to be data driven and built

--- a/src/views/layout/layout.twig
+++ b/src/views/layout/layout.twig
@@ -35,7 +35,7 @@
 		</style>
 	</head>
 	<body>
-		{% include '../includes/imageset.twig' %}
+		{% include '../includes/defs.twig' %}
 
 		<div class="wrap">
 			<div class="o-container">
