--- a/src/scss/objects/_bar.scss
+++ b/src/scss/objects/_bar.scss
@@ -101,7 +101,11 @@ $bar-badge-color: $default-error-item-color !default;
 		@include center($bar-height);
 		color: $bar-user-title-color;
 		padding: ($bar-spacing * 2);
-		padding-right: 0;
+		padding-left: 0;
+
+		&:first-of-type {
+			padding-left: ($bar-spacing * 2);
+		}
 	}
 
 	&-item-text {
