add header to render with version number

--- a/src/scss/core.scss
+++ b/src/scss/core.scss
@@ -1,8 +1,12 @@
-//------------------------------------------------------------------------------
-// @render: Base-L
-//------------------------------------------------------------------------------
-// @author: hanakin -- midaym
-// @version: 0.22.0
+/* -----------------------------------------------------------------------------
+ * Base-L: Core
+ * -----------------------------------------------------------------------------
+ * @author: hanakin -- midaym
+ * @version: 0.22.0
+
+ * --------------------------------------------------------------------------- */
+
+//
 // @description
 //
 //
@@ -73,7 +77,6 @@
 //                                 classes go those that usually contain the
 //                                 highest specificity.
 //
-
 
 // 1. Global Settings
 //-------------------------
