--- a/src/scss/utilities.scss
+++ b/src/scss/utilities.scss
@@ -1,8 +1,12 @@
-//------------------------------------------------------------------------------
-// @render: Utilities
-//------------------------------------------------------------------------------
-// @author: hanakin -- midaym
-// @version: 0.22.0
+/* -----------------------------------------------------------------------------
+ * Base-L: Utilities
+ * -----------------------------------------------------------------------------
+ * @author: hanakin -- midaym
+ * @version: 0.22.0
+
+ * --------------------------------------------------------------------------- */
+
+//
 // @description
 //
 //
