--- a/src/scss/tools/mixin/_mixins.scss
+++ b/src/scss/tools/mixin/_mixins.scss
@@ -2,7 +2,7 @@
 // @render: Mixins
 //------------------------------------------------------------------------------
 // @author: hanakin -- midaym
-// @version: 0.22.0
+// @version: 0.23.0
 // @description
 //
 //------------------------------------------------------------------------------
@@ -16,7 +16,7 @@
 @import 'center';
 @import 'clearfix';
 @import 'font-size';
-@import 'grid';
+@import 'flexbox';
 @import 'shadows';
 @import 'space';
 @import 'type';
