--- a/src/scss/objects/_modal.scss
+++ b/src/scss/objects/_modal.scss
@@ -2,7 +2,7 @@
 // @object: Modal
 //------------------------------------------------------------------------------
 // @author: hanakin -- midaym
-// @version: 0.22.0
+// @version: 0.23.0
 // @description
 //
 //------------------------------------------------------------------------------
@@ -77,7 +77,7 @@ $modal-text-color: $default-action-color !default;
 		margin-top: ($modal-spacing * 3) 0 0;
 		padding: 0 ($modal-spacing * 3) ($modal-spacing * 3);
 
-		@media (min-width: $bp-md) {
+		@media (min-width: $md) {
 			line-height: 1.5;
 		}
 	}
@@ -95,7 +95,7 @@ $modal-text-color: $default-action-color !default;
 		margin-right: $modal-spacing;
 	}
 
-	@media (min-width: $bp-md) {
+	@media (min-width: $md) {
 		min-width: $modal-min-width-lg;
 	}
 }
