--- a/src/scss/tools/mixin/_flexbox.scss
+++ b/src/scss/tools/mixin/_flexbox.scss
@@ -1,11 +1,11 @@
 //------------------------------------------------------------------------------
-// @tool: Grid
+// @tool: Flexbox
 //------------------------------------------------------------------------------
 // @author: hanakin -- midaym
-// @version: 0.22.0
+// @version: 0.23.0
 // @description
 //
-// Mixin for generating the grid col widths
+// Mixin for flexbox
 //
 //------------------------------------------------------------------------------
 
@@ -13,27 +13,9 @@
 // @settings
 
 // Layout Variables
-$grid-gutter: $default-grid-gutter !default;
 
 //
 // @scss
-
-@mixin col-width($w: 0) {
-	flex: 0 0 percentage($w / 12);
-	width: percentage($w / 12);
-}
-
-@mixin pull($w: 0) {
-	right: percentage($w / 12);
-}
-
-@mixin push($w: 0) {
-	left: percentage($w / 12);
-}
-
-@mixin offset($w: 0) {
-	margin-left: percentage($w / 12);
-}
 
 @mixin parent($col: row) {
 	display: flex;
